# top-words

./: .gitignore  CMakeLists.txt  explanation.txt  main.cpp  plotter.cpp  plotter.h  plotter.qrc  plotter.ui  readme.md  threads.cpp  threads.h  top-fifteen.cpp  top-fifteen.h
.github/workflows/: c-cpp.yml
